--- a/doc/20220615_LASSO_specifications_fonctionnelles.adoc
+++ b/doc/20220615_LASSO_specifications_fonctionnelles.adoc
@@ -125,7 +125,7 @@ Pour chaque calque, on décrit :
     * émotion:
 
         + agrément
-        + eventfull
+        + eventful
         + ...
 
 - unité des valeurs : 
